--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "styled-component": "^2.8.0",
     "styled-components": "^5.3.11"
   },
   "devDependencies": {
     "@types/node": "^20.2.5",
-    "@types/react": "^18.2.7",
+    "@types/react": "17.0.52",
     "@types/react-dom": "^18.2.4",
     "@types/react-helmet": "^6.1.6",
     "@types/styled-components": "^5.1.26",
